2010-04-04 Borut Razem <borut.razem AT siol.net>

	* device/include/hc08/mc68hc908jb8.h:
	  sdcc library license changed to GPL+LE
	* sdas/linksrc/Makefile.in: Solaris make (GNU Make 3.81) doesn't like
	  $$() syntax; converted to ``

2010-04-03 Borut Razem <borut.razem AT siol.net>

	* device/include/mcs51/p89lpc933_4.h, device/include/mcs51/p89lpc935_6.h,
	  device/include/mcs51/p89v66x.h, device/include/mcs51/p89c66x.h,
	  device/include/mcs51/at89Sx051.h: sdcc library license changed to GPL+LE

2010-04-03 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/gen.c:
	  Fixed bug #2977331.

2010-04-01 Borut Razem <borut.razem AT siol.net>

	* support/regression/ports/host/spec.mk.in:
	  fixed execution of host regression tests on Mac OS X 

2010-03-28 Borut Razem <borut.razem AT siol.net>

	* device/include/ds400/ds400rom.h, device/include/asm/gbz80/features.h,
	  device/lib/z80/crt0.s, device/lib/gbz80/stubs.s,
	  device/lib/gbz80/div.s, device/lib/gbz80/fstubs.s,
	  device/lib/gbz80/putchar.s, device/lib/gbz80/crt0.s,
	  device/lib/gbz80/crt0_rle.s, device/lib/gbz80/heap.s,
	  device/lib/gbz80/mul.s, device/lib/gbz80/shift.s,
	  device/lib/ds400/memcpyx.c, device/lib/hc08/_mulint.c,
	  device/lib/hc08/_ret.c, device/lib/hc08/_mullong.c,
	  device/lib/mcs51/crtpagesfr.asm, device/lib/mcs51/crtxpush.asm,
	  device/lib/mcs51/crtxpopbits.asm, device/lib/mcs51/crtxpushr0.asm,
	  device/lib/mcs51/crtbank.asm, device/lib/mcs51/crtcall.asm,
	  device/lib/mcs51/crtxinit.asm, device/lib/mcs51/crtstart.asm,
	  device/lib/mcs51/crtxstack.asm, device/lib/mcs51/crtxclear.asm,
	  device/lib/mcs51/crtclear.asm, device/lib/mcs51/crtxpop.asm,
	* device/include/asm/mcs51/features.h, device/include/mcs51/*.h:
	  sdcc library license changed to GPL+LE

2010-03-25 Borut Razem <borut.razem AT siol.net>

	* sdcc/configure, sdcc/configure.in, sdcc/sdccconf_in.h,
	  sdcc/sim/ucsim/configure, sdcc/sim/ucsim/configure.in,
	  sdcc/sim/ucsim/ddconfig_in.h: